kubernetes/platform/kafka/kafdrop/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  labels:
    app.kubernetes.io/instance: kafdrop
    app.kubernetes.io/name: kafdrop
spec:
  ports:
    - port: 9000
      targetPort: 9000
      name: kafdrop
      protocol: TCP
  selector:
    app.kubernetes.io/instance: kafdrop
    app.kubernetes.io/name: kafdrop
  type: ClusterIP
